--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@
                             jasbleidi
                         </h4>
                         <div>
-                            <span class="material-icons" id="material">
-                                done_all
-                            </span>
-                            <small id="frase"> La excelencia</small>
+                            <span class="material-icons" id="imagen">
+                                image
+                                </span>
+                                
+                            <small id="ha"> 🥵🥵🔥🔥</small>
                         </div>
                     </div>
-                    <small id="hora">8:55 p.m</small>
+                    <small id="hora"> ayer</small>
+                    <span class="material-icons" id="mute">
+                        volume_off
+                        </span>
                 </article>
                 <article class="chat">
                     <img src="img/img2.jfif">
