--- a/chat w/index.html
+++ b/chat w/index.html
@@ -260,10 +260,11 @@
                     <div class="cont-article">
                         <div class="mensaje2">
                             <div>
-                                <small id="ha"> :V</small>
+                               <img id="tonta" src="img/Jasbleidixd.jpeg" 
+                               style="width: 20rem; height: 15rem;">
                             </div>
-                            <small id="hora"> 1:23am</small>
-                            <span class="material-icons" id="visto">
+                            <small id="hora" style="margin-top: 220px;"> 1:23am</small>
+                            <span class="material-icons" id="visto" style="margin-top: 220px;">
                                 done_all
                             </span>
                         </div>
@@ -274,8 +275,8 @@
                     <div class="cont-article">
                         <div class="mensaje1">
                             <div>
-                                <small id="ha"> jajajaaj XD</small>
-                                <small id="hora"> 1:23am</small>
+                                <video  id="diosito" controls source src="img/diosito.mp4" style="height: 15rem; width: 20rem;"></video>
+                                <small id="hora" style="margin-top: 220px;"> 1:23am</small>
                             </div>
                         </div>
                     </div>
@@ -284,7 +285,7 @@
                     <div class="cont-article">
                         <div class="mensaje2">
                             <div>
-                                <small id="ha">XD </small>
+                                <audio controls source src="img/juliangei.ogg"></audio>
                             </div>
                             <small id="hora"> 1:23am</small>
                             <span class="material-icons" id="visto">
@@ -297,7 +298,7 @@
 
                     </div>
                 </article>
-
+            
 
 
 
